--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-draft-wysiwyg": "1.14.5",
     "react-html-parser": "2.0.2",
     "react-resizable-rotatable-draggable": "0.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "5.2.1",
     "tether": "1.4.7"
