--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
+  "proxy": "http://localhost:8080/",
   "keywords": [
     "react",
     "starter"
@@ -9,16 +10,6 @@
   "main": "src/index.js",
   "dependencies": {
     "@babel/core": "7.9.0",
-    "dom-to-image": "2.6.0",
-    "jquery": "3.5.1",
-    "popper.js": "1.16.1",
-    "prop-types": "15.7.2",
-    "react-html-parser": "2.0.2",
-    "react-resizable-rotatable-draggable": "0.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
-    "styled-components": "5.2.1",
-    "tether": "1.4.7",
     "@ckeditor/ckeditor5-adapter-ckfinder": "^24.0.0",
     "@ckeditor/ckeditor5-alignment": "^24.0.0",
     "@ckeditor/ckeditor5-autoformat": "^24.0.0",
@@ -48,6 +39,7 @@
     "@svgr/webpack": "4.3.3",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "axios": "^0.21.1",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -56,6 +48,7 @@
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "3.4.2",
+    "dom-to-image": "2.6.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -67,6 +60,7 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
+    "firebase": "^8.2.3",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
@@ -74,24 +68,33 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jquery": "3.5.1",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
+    "popper.js": "1.16.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "15.7.2",
     "react": "17.0.0",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "17.0.0",
+    "react-html-parser": "2.0.2",
+    "react-resizable-rotatable-draggable": "0.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.3",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
+    "styled-components": "5.2.1",
     "terser-webpack-plugin": "2.3.8",
+    "tether": "1.4.7",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
